--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  width: 85%;
   gap: 100px;
   background-color: #ffffff;
   border-radius: 4px;
@@ -997,6 +997,32 @@ hr{
     font-size: 12px;
     width: 80%;
   }
+
+  .main-about{
+    width: 85%;
+  }
+
+  .about-head{
+    font-size: 24px;
+  }
+  .sub-about-right{
+    width: 85%;
+    text-align: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+  .about-desc{
+    width: 90%;
+    font-size: 12px;
+  }
+  .about-right-below div{
+    align-items: center;
+    width: 85%;
+    gap: 10%;
+    text-align: center;
+  }
+
 }
 
 @media screen and (max-width:900px){
@@ -1098,5 +1124,10 @@ hr{
  
   .contact-right{
     display: none;
+  }
+
+  .sub-title{
+    font-size: 18px;
+    line-height: 28px;
   }
 }
