--- a/style.css
+++ b/style.css
@@ -341,6 +341,7 @@ sec-3:focus,.nav-links:nth-child(2){
 .sub-div{
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 10px;
 }
 
@@ -632,7 +633,7 @@ sec-3:focus,.nav-links:nth-child(2){
   display: flex;
   flex-direction: column;
   padding-left: 05%;
-  height: 250px;
+  padding-bottom: 04%;
   justify-content: center;
   margin-top: 80px;
   flex-shrink: 0;
@@ -645,7 +646,7 @@ sec-3:focus,.nav-links:nth-child(2){
   font-family: Lexend;
   font-size: 24px;
   font-weight: 500;/* 75% */
-  padding: 0px 0px 24px 0px;
+  padding: 10px 0px 24px 0px;
   
 }
 .Pop-msg p{
@@ -894,7 +895,7 @@ hr{
   }
   
   .Hero-Sec{
-    height: 96vh;
+    height: 100%;
     display: flex;
     justify-content:center;
     margin-top: 20px;
@@ -1140,7 +1141,20 @@ hr{
     font-size: 10px;
   }
 
+  .mini-sub{
+    font-size: 10px;
+    width: 80%;
+  }
+
   .footer{
     height: 100%;
+  }
+
+  .hero-text{
+    font-size: 24px
+  }
+
+  .hero-desc{
+    font-size: 14px;
   }
 }
