--- a/style.css
+++ b/style.css
@@ -1085,10 +1085,6 @@ hr{
     flex-wrap: wrap;
   }
 
-  .Nav-bar{
-    width: 90%;
-    gap: 30px;
-  }
   .footer-right-btns{
     display: flex;
     gap: 20px;
@@ -1099,6 +1095,14 @@ hr{
   .footer-down{
     flex-direction: column;
     gap: 20px;
+  }
+}
+
+@media screen and (min-width: 1200px) and (max-width: 1440px) {
+  
+  .Nav-bar{
+    width: 90%;
+    gap: 30px;
   }
 }
 
