--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 85%;
+  width: 100%;
   gap: 100px;
   background-color: #ffffff;
   border-radius: 4px;
@@ -230,7 +230,7 @@ body{
 }
 .feat-title{
   font-size: 16px;
-  width:150%;
+  width:100%;
   
 }
 .feat-img{
@@ -686,7 +686,6 @@ sec-3:focus,.nav-links:nth-child(2){
   width: 100%; 
   margin-top: 80px;
   flex-direction: column;
-  height: 400px;
   padding: 68px 169.6px 66.68px 169px;
   justify-content: center;
   align-items: center;
@@ -718,6 +717,9 @@ sec-3:focus,.nav-links:nth-child(2){
   display: flex;
   flex-direction: column;
   gap: 30px;
+}
+.footer-right-btns{
+  display: flex;
 }
 
 .footer-right h5{
@@ -789,6 +791,7 @@ hr{
   
   .Nav-bar{
     gap: 30%;
+    width: 100%;
   }
   .toggle_btn{
     display: block;
@@ -796,7 +799,6 @@ hr{
   .toggle_btn i{
     font-size: 32px;
   }
-  
   .logo-img{
     height: 48px;
     width: 48px;
@@ -925,6 +927,9 @@ hr{
 @media screen and (max-width:900px){
   .form-full{
       flex-direction: column-reverse;
+  }
+  .footer{
+    padding: 5%;
   }
 }
 
@@ -1076,18 +1081,18 @@ hr{
 }
 
 @media screen and (max-width:1140px){
-  .footer-main{
+  /* .footer-main{
     flex-direction: column;
     gap: 20px;
-  }
+  } */
   .footer-right{
     gap: 10px;
     flex-wrap: wrap;
   }
 
   .footer-right-btns{
-    display: flex;
-    gap: 20px;
+    flex-direction: column;
+    gap: 10px;
   }
   .footer-main p{
     width: 80%;
@@ -1101,7 +1106,7 @@ hr{
 @media screen and (min-width: 1200px) and (max-width: 1440px) {
   
   .Nav-bar{
-    width: 90%;
+    width: 100%;
     gap: 30px;
   }
 }
@@ -1123,7 +1128,11 @@ hr{
     width: 80%;
   }
 }
-
+@media screen and (max-width:1280px){
+  .nav-ul{
+    gap: 15px;
+  }
+}
 
 
 
@@ -1134,6 +1143,10 @@ hr{
  
   .contact-right{
     display: none;
+  }
+  .contact-left{
+    margin-left: 10px;
+    margin-right: 10px;
   }
 
   .sub-title{
